the_project/todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: img-cache
          persistentVolumeClaim:
            claimName: image-cache
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: todo-app
          image: docker.io/iku1/todo_app:2.2
          imagePullPolicy: Always
          volumeMounts:
          - name: img-cache
            mountPath: /tmp/img-cache
